--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
     </header>
 
     <div class="player">
-        <audio autoplay muted loop controls>
-            <source src="assets/moving_on.wav" type="audio/wav">
-            Your browser does not support the audio element.
-        </audio>
+        <audio controls>
+  <source src="assets/Moving_On_Compressed.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
+
     </div>
 
     <div class="music-links">
