--- a/index.html
+++ b/index.html
@@ -62,7 +62,18 @@
             color: white;
             margin: 0 10px;
             text-decoration: none;
-        }
+}
+
+.gallery img {
+  transition: transform 0.3s ease;
+}
+
+
+
+.gallery img:hover {
+  transform: scale(1.05);
+}
+
     </style>
 </head>
 <body>
