--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             height: 315px;
             margin-top: 2em;
         }
-        .gallery img {
+        . img {
             width: 100%;
             max-width: 900px;
             margin: 1.5em 0;
@@ -95,14 +95,7 @@
   <source src="assets/Moving_On_Compressed.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
-<div class="gallery">
-  <img src="assets/img1.jpg" alt="Gallery 1">
-  <img src="assets/img2.jpg" alt="Gallery 2">
-  <img src="assets/img3.jpg" alt="Gallery 3">
-  <img src="assets/img4.jpg" alt="Gallery 4">
-  <img src="assets/img5.jpg" alt="Gallery 5">
-  <img src="assets/img6.jpg" alt="Gallery 6">
-</div>
+
 
     </div>
 
@@ -115,6 +108,15 @@
     </div>
 
     <iframe src="https://www.youtube.com/embed/Wb7CbPLFZxA" allowfullscreen></iframe>
+<div class="gallery">
+  <h2>Photo Gallery</h2>
+  <img src="assets/img1.jpg" alt="Gallery 1" />
+  <img src="assets/img2.jpg" alt="Gallery 2" />
+  <img src="assets/img3.jpg" alt="Gallery 3" />
+  <img src="assets/img4.jpg" alt="Gallery 4" />
+  <img src="assets/img5.jpg" alt="Gallery 5" />
+  <img src="assets/img6.jpg" alt="Gallery 6" />
+</div>
 
     
 
