--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </header>
 
     <div class="player">
-        <audio controls>
+        <audio controls autoplay>
   <source src="assets/Moving_On_Compressed.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
