--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><link rel="icon" type="image/png" href="favicon.png">
+
 <head>
     <meta charset="UTF-8">
     <title>503Leander</title>
