--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #111;
+          background: url("vintage-bg.png") no-repeat center center fixed;
+background-size: cover;
+
             color: #fff;
             text-align: center;
         }
