--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>503Leander</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-          background: url("vintage-bg.png") no-repeat center center fixed;
-background-size: cover;
+       body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    color: #fff;
+    text-align: center;
+  background: url("vintage-bg.png") no-repeat center center fixed;
+    background-size: cover;
+}
+
 
             color: #fff;
             text-align: center;
