--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     font-family: Arial, sans-serif;
     color: #fff;
     text-align: center;
-  background: url("vintage-bg.png") no-repeat center center fixed;
+ background: url("ducklyn-vintage-bg.png") no-repeat center center fixed;
     background-size: cover;
 }
 
