--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <title>503Leander</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-       body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    color: #fff;
-    text-align: center;
- background: url("ducklyn-vintage-bg.png") no-repeat center center fixed;
-    background-size: cover;
+      body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  color: #fff;
+  text-align: center;
+ background: url("final-bg.png.png") no-repeat center center fixed;
+  background-size: cover;
 }
-
-
             color: #fff;
             text-align: center;
         }
