--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   font-family: Arial, sans-serif;
   color: #fff;
   text-align: center;
- background: url("final-bg.png.png") no-repeat center center fixed;
+ background: url('duck-bg.png') no-repeat center center fixed;
   background-size: cover;
 }
             color: #fff;
