--- a/index.html
+++ b/index.html
@@ -131,7 +131,13 @@
         <a class="instagram" href="https://instagram.com/503Leander" target="_blank">Instagram</a>
     </div>
 
-    <iframe src="https://www.youtube.com/embed/Wb7CbPLFZxA" allowfullscreen></iframe>
+    <div class="video-container" style="margin-top: 40px;">
+  <iframe width="100%" height="315" src="https://www.youtube.com/embed/HVbjFqV4fpc?rel=0&autoplay=1&mute=1&loop=1&playlist=HVbjFqV4fpc" 
+    title="Moving On - 503Leander" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen></iframe>
+</div>
+
 <div class="gallery">
   <h2>Photo Gallery</h2>
   <img src="assets/img1.jpg" alt="Gallery 1" />
