--- a/index.html
+++ b/index.html
@@ -124,8 +124,16 @@
     </div>
 
     <div class="music-links">
-        <a href="https://open.spotify.com/artist/2WITI6ZnfTtWTyuWT4sBQv?si=RUjZwiQHQ8-3y6ZelV3MKA" target="_blank">Spotify</a>
-        <a class="apple" href="https://music.apple.com/us/artist/503leander/1462960928" target="_blank">Apple Music</a>
+        <div class="music-links">
+    <a class="spotify" href="https://open.spotify.com/artist/4zKudltQlyzHYnW6NghY62?si=RPdjAXhFSJus0xLfJqy3-A" target="_blank">Spotify</a>
+    <a class="apple" href="https://music.apple.com/us/artist/503leander/1462960928" target="_blank">Apple Music</a>
+    <a class="tiktok" href="https://tiktok.com/@503leander" target="_blank">TikTok</a>
+    <a class="youtube" href="https://youtube.com/@503leander" target="_blank">YouTube</a>
+    <a class="instagram" href="https://instagram.com/503leander" target="_blank">Instagram</a>
+</div>
+
+
+        
         <a class="tiktok" href="https://tiktok.com/@503Leander" target="_blank">TikTok</a>
         <a class="youtube" href="https://youtube.com/@503Leander" target="_blank">YouTube</a>
         <a class="instagram" href="https://instagram.com/503Leander" target="_blank">Instagram</a>
